<resources>
    <string name="app_name">Admin</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_leaderboard">Leaderboard</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_home">Home</string>
    <string name="nav_person">Account</string>
    <string name="nav_settings">Settings</string>


    <string-array name="Games">
        <item>PUBG</item>
        <item>Free Fire</item>
        <item>Call of Duty</item>
    </string-array>

    <string-array name="Pubg_map">
        <item>Erangel</item>
        <item>Miramar</item>
        <item>Sanhok</item>
        <item>Vikendi</item>
    </string-array>

    <string-array name="Free_Fire_maps">
        <item>Bermuda</item>
        <item>Purgatory</item>
        <item>Kalahari</item>
    </string-array>

    <string name="pubg_txt">
        check out who is  the top player in PUBG
    </string>

    <string name="freefire_txt">
        check out who is  the top player in PUBG
    </string>

    <string name="codm_txt">
        check out who is  the top player in PUBG
    </string>
</resources>