<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_leaderboard"
        android:title="@string/nav_leaderboard"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:checked="false"
        />

    <item
        android:id="@+id/nav_notifications"
        android:title="@string/nav_notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        />

    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        />

    <item
        android:id="@+id/nav_account"
        android:title="@string/nav_person"
        android:icon="@drawable/ic_baseline_person_24"
        />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        />

</menu>